Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignNumberInteger.quorum
number n = cast(number, 5)
output n