Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignNumObjInteger.quorum
Number n = cast(Number, 5)